Source/WTF/wtf/generic/WorkQueueGeneric.cpp
@@ -32,24 +32,10 @@
 
 #include <wtf/text/WTFString.h>
 
-static const size_t kVisualStudioThreadNameLimit = 31;
-
 void WorkQueue::platformInitialize(const char* name, Type, QOS)
 {
-    // This name can be com.apple.WebKit.ProcessLauncher or com.apple.CoreIPC.ReceiveQueue.
-    // We are using those names for the thread name, but both are longer than 31 characters,
-    // which is the limit of Visual Studio for thread names.
-    // When log is enabled createThread() will assert instead of truncate the name, so we need
-    // to make sure we don't use a name longer than 31 characters.
-    String threadName(name);
-    size_t size = threadName.reverseFind('.');
-    if (size != notFound)
-        threadName = threadName.substring(size + 1);
-    if (threadName.length() > kVisualStudioThreadNameLimit)
-        threadName = threadName.right(kVisualStudioThreadNameLimit);
-
     LockHolder locker(m_initializeRunLoopConditionMutex);
-    m_workQueueThread = createThread(threadName.ascii().data(), [this] {
+    m_workQueueThread = createThread(name, [this] {
         {
             LockHolder locker(m_initializeRunLoopConditionMutex);
             m_runLoop = &RunLoop::current();
